sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value plusGrand
			if (plusGrand(i,i+1)){
                            ^